# attendance-backend

./: .dockerignore  Dockerfile  backup.sql  docker-compose.dev.yaml  docker-compose.yaml  ha.sql  ha_inserts.sql  hello.py  hv.py  pyproject.toml
app/: main.py  pre_populate.py
app/controllers/: user_auth.py
app/controllers/lecturer/: courses.py  lecturer_session.py
app/controllers/oauth/: zoom_oauth_controller.py
app/controllers/student/: courses.py
app/controllers/webhook/: zoom_webhook_controller.py
app/db/: database_session.py
app/dependencies/controllers/lecturer/: lecturer_course_controller.py  lecturer_session.py
app/dependencies/db/: db_session_dep.py
app/dependencies/role_verifier/: lecturer_verifier.py  student_verifier.py
app/dependencies/user_jwt_verifier/: user_jwt_verifier.py
app/enums/: session_environment.py  user_role.py
app/models/: attendance.py  class_model.py  course.py  department.py  enrollment.py  session.py  social_auth.py  user.py
app/repositories/: attendance_repo.py  class_repo.py  course_repo.py  department_repo.py  enrollment_repo.py  session_repo.py  social_auth.py  user_repo.py
app/routers/: __init__.py
app/routers/v1/: __init__.py  auth.py  user_routers.py
app/schema/: attendance.py  course.py  session.py  user.py  user_auth.py  zoom_profile.py  zoom_webhook.py
app/utils/: zoom_oauth_handler.py
core/: env_settings.py
core/customs/: admin_request.py  exception_type.py  user_request.py
core/exceptions/: simple_exception.py
core/security/: jwt_handler.py  password_handler.py
(+10 files in other folders)
